Functional mailing enabled

--- a/priceTracker.ipynb
+++ b/priceTracker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b3c33aa5",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,7 @@
     "# import sys\n",
     "# sys.prefix == sys.base_prefix\n",
     "\n",
-    "import smtplib\n",
+    "import smtplib, ssl\n",
     "import pandas as pd\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -67,26 +67,35 @@
     "    return subject_and_message\n",
     "\n",
     "def send_mail(df):\n",
-    "    message_text = getMail(df)\n",
-    "    with smtplib.SMTP(\"smtp.server.address\", 587) as smtp:\n",
-    "        smtp.starttls()\n",
-    "        smtp.login(mail_user, mail_pass)\n",
-    "        smtp.sendmail(mail_user, mail_to, message_text)\n",
+    "    messageText = getMail(df)\n",
+    "    smtpServer = \"smtp.gmail.com\"\n",
+    "    senderEmail = \"pricetrackez@gmail.com\"\n",
+    "    password = \"csbrwvhrezhwtsff\"\n",
+    "    receiverEmail = \"br.deepakram@gmail.com\"\n",
+    "    context = ssl.create_default_context()\n",
+    "    with smtplib.SMTP(smtpServer, 587) as smtp:\n",
+    "        try:\n",
+    "            smtp.starttls(context = context)\n",
+    "            smtp.login(senderEmail,password)\n",
+    "            smtp.sendmail(senderEmail,receiverEmail, messageText)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
     "\n",
     "def mainDriver():\n",
     "    df = readUrls(PRODUCT_URL_CSV)\n",
     "    display(df)\n",
     "    df_updated = formatProducts(df)\n",
-    "#    if SAVE_TO_CSV:\n",
-    "#        df_updated.to_csv(PRICES_CSV, index=False, mode=\"a\")\n",
-    "#        print(\"running\")\n",
-    "    #if SEND_MAIL:\n",
-    "     #   send_mail(df_updated)"
+    "    if SAVE_TO_CSV:\n",
+    "        df_updated.to_csv(PRICES_CSV, index=False, mode=\"a\")\n",
+    "        print(\"running\")\n",
+    "    if SEND_MAIL:\n",
+    "      send_mail(df_updated)\n",
+    "      print(\"mailed\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f6eba9a8",
    "metadata": {},
    "outputs": [
@@ -150,9 +159,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28850.0\n",
-      "0.0\n",
-      "[{'product': 'Nothing Phone(1)', 'url': 'https://www.amazon.in/Nothing-Phone-Black-128-RAM/dp/B0BKZVF7VV', 'alertPrice': 27950, 'price': 28850.0, 'alert': False}, {'product': 'iPhone 14', 'url': 'https://www.amazon.in/Apple-iPhone-128GB-Space-Black/dp/B0BDJ7P6NG', 'alertPrice': 121990, 'price': 0.0, 'alert': True}]\n"
+      "26999.0\n",
+      "122999.0\n",
+      "[{'product': 'Nothing Phone(1)', 'url': 'https://www.amazon.in/Nothing-Phone-Black-128-RAM/dp/B0BKZVF7VV', 'alertPrice': 27950, 'price': 26999.0, 'alert': True}, {'product': 'iPhone 14', 'url': 'https://www.amazon.in/Apple-iPhone-128GB-Space-Black/dp/B0BDJ7P6NG', 'alertPrice': 121990, 'price': 122999.0, 'alert': False}]\n",
+      "running\n"
      ]
     }
    ],
