Added new function to addProducts

--- a/priceTracker.ipynb
+++ b/priceTracker.ipynb
@@ -2,14 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "id": "b3c33aa5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import sys\n",
-    "# sys.prefix == sys.base_prefix\n",
-    "\n",
     "import smtplib, ssl\n",
     "import pandas as pd\n",
     "import requests\n",
@@ -21,6 +18,21 @@
     "SAVE_TO_CSV = True\n",
     "PRICES_CSV = \"prices.csv\"\n",
     "SEND_MAIL = True\n",
+    "\n",
+    "def addProduct(csv_file):\n",
+    "    df = readUrls(csv_file)\n",
+    "    productName = input(\"Enter Product Name: \")\n",
+    "    productUrl = input(\"Enter Product URL: \")\n",
+    "    alertPrice = float(input (\" Enter Alert Price to set: \"))\n",
+    "    #Method 1 using append\n",
+    "    #new_row = pd.Series({'product': productName, 'url': productUrl,'alertPrice': alertPrice})\n",
+    "    #df = df.append(new_row, ignore_index=True)\n",
+    "   \n",
+    "    #Method 2 w/o append as it is deprecated\n",
+    "    new_row = pd.Series({'product': productName, 'url': productUrl,'alertPrice': alertPrice},name=len(df))\n",
+    "    df.loc[len(df)] = new_row\n",
+    "    df.to_csv(csv_file)\n",
+    "    return df\n",
     "\n",
     "def readUrls(csv_file):\n",
     "    df = pd.read_csv(csv_file)    \n",
@@ -36,15 +48,14 @@
     "def getPrice(html):\n",
     "\n",
     "    soup = BeautifulSoup(html, \"html.parser\")\n",
+    "    #alternate way to locate price in AZ\n",
     "    #el =\"₹1,21,999\" #soup.find('span', {'class' :'a-price-whole'} ) #a-price-whole\"  /a-offscreen\n",
     "    #priceEl = soup.find(\"span\", class_=\"a-offscreen\")\n",
     "    priceEl = soup.find(\"span\", class_=\"a-price-whole\")\n",
     "    if priceEl:\n",
     "        price = priceEl.get_text()\n",
     "        priceNew = price.replace(\",\", \"\").replace(\"₹\",\"\")\n",
-    "        #print(priceNew)\n",
     "    else:\n",
-    "        #print(\"The price element could not be found\")\n",
     "        priceNew = 0\n",
     "    return float(priceNew)\n",
     "\n",
@@ -84,18 +95,23 @@
     "def mainDriver():\n",
     "    df = readUrls(PRODUCT_URL_CSV)\n",
     "    display(df)\n",
+    "    ch = input(\" Would you like to add a product? \")\n",
+    "    if(ch == 'Yes'):\n",
+    "        df = addProduct(PRODUCT_URL_CSV)\n",
+    "        print(\"added\")\n",
+    "    display(df)\n",
     "    df_updated = formatProducts(df)\n",
     "    if SAVE_TO_CSV:\n",
     "        df_updated.to_csv(PRICES_CSV, index=False, mode=\"a\")\n",
     "        print(\"running\")\n",
     "    if SEND_MAIL:\n",
     "      send_mail(df_updated)\n",
-    "      print(\"mailed\")"
+    "      print(\"mailed\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "id": "f6eba9a8",
    "metadata": {},
    "outputs": [
@@ -159,10 +175,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "added\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product</th>\n",
+       "      <th>url</th>\n",
+       "      <th>alertPrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Nothing Phone(1)</td>\n",
+       "      <td>https://www.amazon.in/Nothing-Phone-Black-128-...</td>\n",
+       "      <td>27950.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>iPhone 14</td>\n",
+       "      <td>https://www.amazon.in/Apple-iPhone-128GB-Space...</td>\n",
+       "      <td>121990.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Nike Shoes</td>\n",
+       "      <td>https://www.amazon.in/Nike-Legacy-Sail-Vivid-G...</td>\n",
+       "      <td>3000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            product                                                url  \\\n",
+       "0  Nothing Phone(1)  https://www.amazon.in/Nothing-Phone-Black-128-...   \n",
+       "1         iPhone 14  https://www.amazon.in/Apple-iPhone-128GB-Space...   \n",
+       "2        Nike Shoes  https://www.amazon.in/Nike-Legacy-Sail-Vivid-G...   \n",
+       "\n",
+       "   alertPrice  \n",
+       "0     27950.0  \n",
+       "1    121990.0  \n",
+       "2      3000.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "26999.0\n",
       "122999.0\n",
-      "[{'product': 'Nothing Phone(1)', 'url': 'https://www.amazon.in/Nothing-Phone-Black-128-RAM/dp/B0BKZVF7VV', 'alertPrice': 27950, 'price': 26999.0, 'alert': True}, {'product': 'iPhone 14', 'url': 'https://www.amazon.in/Apple-iPhone-128GB-Space-Black/dp/B0BDJ7P6NG', 'alertPrice': 121990, 'price': 122999.0, 'alert': False}]\n",
-      "running\n"
+      "0.0\n",
+      "[{'product': 'Nothing Phone(1)', 'url': 'https://www.amazon.in/Nothing-Phone-Black-128-RAM/dp/B0BKZVF7VV', 'alertPrice': 27950.0, 'price': 26999.0, 'alert': True}, {'product': 'iPhone 14', 'url': 'https://www.amazon.in/Apple-iPhone-128GB-Space-Black/dp/B0BDJ7P6NG', 'alertPrice': 121990.0, 'price': 122999.0, 'alert': False}, {'product': 'Nike Shoes', 'url': 'https://www.amazon.in/Nike-Legacy-Sail-Vivid-Green-Black-Running/dp/B0B291MD54', 'alertPrice': 3000.0, 'price': 0.0, 'alert': True}]\n",
+      "running\n",
+      "mailed\n"
      ]
     }
    ],
