fixed bug regarding null price for some products

--- a/priceTracker.ipynb
+++ b/priceTracker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "id": "b3c33aa5",
    "metadata": {},
    "outputs": [],
@@ -50,8 +50,8 @@
     "    soup = BeautifulSoup(html, \"html.parser\")\n",
     "    #alternate way to locate price in AZ\n",
     "    #el =\"₹1,21,999\" #soup.find('span', {'class' :'a-price-whole'} ) #a-price-whole\"  /a-offscreen\n",
-    "    #priceEl = soup.find(\"span\", class_=\"a-offscreen\")\n",
-    "    priceEl = soup.find(\"span\", class_=\"a-price-whole\")\n",
+    "    priceEl = soup.find(\"span\", class_=\"a-offscreen\")\n",
+    "    #priceEl = soup.find(\"span\", class_=\"a-price-whole\")  doesn't work for all products\n",
     "    if priceEl:\n",
     "        price = priceEl.get_text()\n",
     "        priceNew = price.replace(\",\", \"\").replace(\"₹\",\"\")\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "id": "f6eba9a8",
    "metadata": {},
    "outputs": [
@@ -219,9 +219,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Nike Shoes</td>\n",
+       "      <td>Nike Court Shoes</td>\n",
        "      <td>https://www.amazon.in/Nike-Legacy-Sail-Vivid-G...</td>\n",
-       "      <td>3000.0</td>\n",
+       "      <td>3200.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -231,12 +231,12 @@
        "            product                                                url  \\\n",
        "0  Nothing Phone(1)  https://www.amazon.in/Nothing-Phone-Black-128-...   \n",
        "1         iPhone 14  https://www.amazon.in/Apple-iPhone-128GB-Space...   \n",
-       "2        Nike Shoes  https://www.amazon.in/Nike-Legacy-Sail-Vivid-G...   \n",
+       "2  Nike Court Shoes  https://www.amazon.in/Nike-Legacy-Sail-Vivid-G...   \n",
        "\n",
        "   alertPrice  \n",
        "0     27950.0  \n",
        "1    121990.0  \n",
-       "2      3000.0  "
+       "2      3200.0  "
       ]
      },
      "metadata": {},
@@ -248,8 +248,8 @@
      "text": [
       "26999.0\n",
       "122999.0\n",
-      "0.0\n",
-      "[{'product': 'Nothing Phone(1)', 'url': 'https://www.amazon.in/Nothing-Phone-Black-128-RAM/dp/B0BKZVF7VV', 'alertPrice': 27950.0, 'price': 26999.0, 'alert': True}, {'product': 'iPhone 14', 'url': 'https://www.amazon.in/Apple-iPhone-128GB-Space-Black/dp/B0BDJ7P6NG', 'alertPrice': 121990.0, 'price': 122999.0, 'alert': False}, {'product': 'Nike Shoes', 'url': 'https://www.amazon.in/Nike-Legacy-Sail-Vivid-Green-Black-Running/dp/B0B291MD54', 'alertPrice': 3000.0, 'price': 0.0, 'alert': True}]\n",
+      "3124.0\n",
+      "[{'product': 'Nothing Phone(1)', 'url': 'https://www.amazon.in/Nothing-Phone-Black-128-RAM/dp/B0BKZVF7VV', 'alertPrice': 27950.0, 'price': 26999.0, 'alert': True}, {'product': 'iPhone 14', 'url': 'https://www.amazon.in/Apple-iPhone-128GB-Space-Black/dp/B0BDJ7P6NG', 'alertPrice': 121990.0, 'price': 122999.0, 'alert': False}, {'product': 'Nike Court Shoes', 'url': 'https://www.amazon.in/Nike-Legacy-Sail-Vivid-Green-Black-Running/dp/B0B291MD54', 'alertPrice': 3200.0, 'price': 3124.0, 'alert': True}]\n",
       "running\n",
       "mailed\n"
      ]
