--- a/priceTracker.ipynb
+++ b/priceTracker.ipynb
@@ -80,9 +80,9 @@
     "def send_mail(df):\n",
     "    messageText = getMail(df)\n",
     "    smtpServer = \"smtp.gmail.com\"\n",
-    "    senderEmail = \"pricetrackez@gmail.com\"\n",
-    "    password = \"csbrwvhrezhwtsff\"\n",
-    "    receiverEmail = \"br.deepakram@gmail.com\"\n",
+    "    senderEmail = # enter sender email
+    "    password = #Enter password of sender email
+    "    receiverEmail = #enter receiver email
     "    context = ssl.create_default_context()\n",
     "    with smtplib.SMTP(smtpServer, 587) as smtp:\n",
     "        try:\n",
