--- a/priceTracker.ipynb
+++ b/priceTracker.ipynb
@@ -80,9 +80,9 @@
     "def send_mail(df):\n",
     "    messageText = getMail(df)\n",
     "    smtpServer = \"smtp.gmail.com\"\n",
-    "    senderEmail = # enter sender email
-    "    password = #Enter password of sender email
-    "    receiverEmail = #enter receiver email
+    "    senderEmail =\" # enter sender email\"\n",
+    "    password = \"#Enter password of sender email\"\n",
+    "    receiverEmail = #enter receiver email\"\n",
     "    context = ssl.create_default_context()\n",
     "    with smtplib.SMTP(smtpServer, 587) as smtp:\n",
     "        try:\n",
